[project]
name = "pubmedfetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "ROHIT RAI",email = "rohitrai2948@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]

[project.scripts]
get-papers-list = "pubmedfetcher.pubmed_fetcher.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
